:bug: Fix main section overlapping bug.

--- a/frontend/source/scss/components/templates/_default.scss
+++ b/frontend/source/scss/components/templates/_default.scss
@@ -34,8 +34,11 @@
     &.main {
       padding-top: 42px;
       
-      @media screen and (min-width: 1024px){
-        grid-row: 1;
+      &:nth-of-type(2),
+      &:nth-of-type(3) {
+        @media screen and (min-width: 1024px){
+          grid-row: 1;
+        }
       }
     }
 
